# sqlx-extension

./: Cargo.toml  README.md
sqlx-extension/: Cargo.toml
sqlx-extension-common/: Cargo.toml
sqlx-extension-common/src/: attribute.rs  describe.rs  field.rs  lib.rs  query_builder.rs
sqlx-extension-common/src/models/: attribute.rs  field.rs  mod.rs
sqlx-extension-common/src/traits/: describe.rs  entity.rs  sql_describe.rs
sqlx-extension-core/: Cargo.toml
sqlx-extension-core/src/: lib.rs  maybe_transaction.rs
sqlx-extension-macros/: Cargo.toml
sqlx-extension-macros/src/: describe.rs  entity.rs  lib.rs  sql_describe.rs  utils.rs
sqlx-extension-macros/src/sql_describe/: queries.rs
sqlx-extension/src/: lib.rs  main.rs
sqlx-extension/src/traits/: mod.rs
