[package]
name = "sqlx-extension-common"
version = "0.1.0"
authors = ["Martin <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.74", features = ["extra-traits", "full", "derive"] }
