[package]
name = "sqlx-extension-common"
version = "0.1.0"
authors = ["Martin <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.5", features = ["runtime-actix-rustls"] }
syn = { version = "1.0.74", features = ["extra-traits", "full", "derive"] }
