[package]
name = "sqlx-extension-macros"
version = "0.1.0"
authors = ["Martin <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx-extension = { path = "../sqlx-extension"}
proc-macro2 = "1.0.28"
quote = "1.0.9"
syn = { version = "1", features = ["full", "extra-traits"]}

[lib]
proc-macro = true
