[package]
name = "sqlx-extension"
version = "0.1.0"
authors = ["Martin <linmad17@htl-kaindorf.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx-extension-macros = {path = "../sqlx-extension-macros"}
sqlx = { "version" = "0.5", "features" = ["runtime-actix-rustls"]}
