[package]
name = "sqlx-extension"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx-extension-core = { path = "../sqlx-extension-core"}
sqlx-extension-macros = { path = "../sqlx-extension-macros"}
